--- a/en_US.lang
+++ b/en_US.lang
@@ -154,6 +154,7 @@ item.card.blank.fairy.secretRare.name=Blank Fairy Card (secret rare)
 
 //Base Set
 set.BS.name=Base Set
+set.JG.name=Jungle Set
 
 //Base Set - Attacks
 //Alakazam
