--- a/zh_CN.lang
+++ b/zh_CN.lang
@@ -3,7 +3,7 @@ gui.guiPack.title=您开了一个卡包！
 itemGroup.tabTCG1=精灵宝可梦卡牌
 
 item.itemCard.name=宝可梦卡牌
-item.itemShard.name=山铜碎片
+item.itemShard.name=奥利哈刚碎片
 item.itemPack.name=补充包
 item.itemBinder.name=卡牌捆绑器
 item.itemCoinset.name=集币
@@ -38,143 +38,142 @@ achievement.binderFull.desc=填满一个卡牌捆绑器
 achievement.binderFullRare=痴迷的卡牌收藏家
 achievement.binderFullRare.desc=用稀有的或更高等的卡牌填满一个卡牌捆绑器
 achievement.binderFullSecretRare=神一般的卡牌收藏家
-achievement.binderFullSecretRare.desc=用超稀有的卡牌填满一个卡牌捆绑器
+achievement.binderFullSecretRare.desc=用珍贵卡牌填满一个卡牌捆绑器
 
 achievement.obtainDeck=卡牌平台生成器
 achievement.obtainDeck.desc=获取一个平台空槽
 achievement.finishDeck=卡牌对战准备
 achievement.finishDeck.desc=命名和完成一个平台
 
-achievement.trade1=TCG Card Swapper
-achievement.trade1.desc=Perform 1 card trade
-achievement.trade5=TCG Card Trader
-achievement.trade5.desc=Perform 5 card trades
-achievement.trade20=TCG Card Dealer
-achievement.trade20.desc=Perform 20 card trades
-achievement.trade50=TCG Card Broker
-achievement.trade50.desc=Perform 50 card trades
-achievement.trade250=TCG Card Kingpin
-achievement.trade250.desc=Perform 250 card trades
+achievement.trade1=卡牌交换者
+achievement.trade1.desc=完成1次卡牌交换
+achievement.trade5=卡牌交易者
+achievement.trade5.desc=完成5次卡牌交换
+achievement.trade20=卡牌经销商
+achievement.trade20.desc=完成20次卡牌交换
+achievement.trade50=卡牌代理人
+achievement.trade50.desc=完成50次卡牌交换
+achievement.trade250=卡牌盟主
+achievement.trade250.desc=完成250次卡牌交换
 
-achievement.obtainCardBack=TCG Artist
-achievement.obtainCardBack.desc=Acquire a custom card back
-achievement.obtainCoinset=TCG Treasurer
-achievement.obtainCoinset.desc=Acquire a custom coinset
-achievement.obtainBoard=TCG Worldflipper
-achievement.obtainBoard.desc=Acquire a custom board
-achievement.obtainRulebook=TCG Rulemaster
-achievement.obtainRulebook.desc=Acquire a custom rulebook
+achievement.obtainCardBack=卡牌艺术家
+achievement.obtainCardBack.desc=获取一个自定义卡背
+achievement.obtainCoinset=卡牌掌柜
+achievement.obtainCoinset.desc=获取一个自定义集币
+achievement.obtainBoard=卡牌世界dalao
+achievement.obtainBoard.desc=获取一个自定义游戏板
+achievement.obtainRulebook=卡牌规则大师
+achievement.obtainRulebook.desc=获取一个自定义规则书
 
-achievement.obtainCommon=Obtain TCG Common
-achievement.obtainCommon.desc=Acquire a common card
-achievement.obtainUncommon=Obtain TCG Uncommon
-achievement.obtainUncommon.desc=Acquire an uncommon card
-achievement.obtainRare=Obtain TCG Rare
-achievement.obtainRare.desc=Acquire a rare card
-achievement.obtainSuperRare=Obtain TCG Super Rare
-achievement.obtainSuperRare.desc=Acquire a super rare card
-achievement.obtainUltraRare=Obtain TCG Ultra Rare
-achievement.obtainUltraRare.desc=Acquire an ultra rare card
-achievement.obtainSecretRare=Obtain TCG Secret Rare
-achievement.obtainSecretRare.desc=Acquire a secret rare card
+achievement.obtainCommon=获得常见卡牌
+achievement.obtainCommon.desc=获取一个常见卡牌
+achievement.obtainUncommon=获得不常见卡牌
+achievement.obtainUncommon.desc=获取一个不常见卡牌
+achievement.obtainRare=获得稀有卡牌
+achievement.obtainRare.desc=获取一个稀有卡牌
+achievement.obtainSuperRare=获得极其稀有卡牌
+achievement.obtainSuperRare.desc=获得一个极其稀有的卡牌
+achievement.obtainUltraRare=获得超级稀有的卡牌
+achievement.obtainUltraRare.desc=获取一个超级稀有的卡牌
+achievement.obtainSecretRare=获得珍贵卡牌
+achievement.obtainSecretRare.desc=获取一个珍贵卡牌
 
-achievement.obtainSeal=Orichalcos Unbound
-achievement.obtainSeal.desc=Acquire a 'Seal of Orichalcos' card
-achievement.obtainShard=Orichalcos Bound
-achievement.obtainShard.desc=Acquire a 'Shard of Orichalcum' item
-achievement.useShard=Seal Shatter
-achievement.useShard.desc=Break an active 'Seal of Orichalcos' with a 'Shard of Orichalcum'
+achievement.obtainSeal=奥利哈刚未开启
+achievement.obtainSeal.desc=获取一个'奥利哈刚的结界'卡牌
+achievement.obtainShard=奥利哈刚开启
+achievement.obtainShard.desc=获取一个'奥利哈刚碎片'的物品
+achievement.useShard=粉碎结界
+achievement.useShard.desc=破坏一个开启的'奥利哈刚的结界' 和一个 '奥利哈刚碎片'
 
-item.card.blank.grass.common.name=Blank Grass Card (common)
-item.card.blank.grass.uncommon.name=Blank Grass Card (uncommon)
-item.card.blank.grass.rare.name=Blank Grass Card (rare)
-item.card.blank.grass.holoRare.name=Blank Grass Card (holo rare)
-item.card.blank.grass.ultraRare.name=Blank Grass Card (ultra rare)
-item.card.blank.grass.secretRare.name=Blank Grass Card (secret rare)
-item.card.blank.fire.common.name=Blank Fire Card (common)
-item.card.blank.fire.uncommon.name=Blank Fire Card (uncommon)
-item.card.blank.fire.rare.name=Blank Fire Card (rare)
-item.card.blank.fire.holoRare.name=Blank Fire Card (holo rare)
-item.card.blank.fire.ultraRare.name=Blank Fire Card (ultra rare)
-item.card.blank.fire.secretRare.name=Blank Fire Card (secret rare)
-item.card.blank.water.common.name=Blank Water Card (common)
-item.card.blank.water.uncommon.name=Blank Water Card (uncommon)
-item.card.blank.water.rare.name=Blank Water Card (rare)
-item.card.blank.water.holoRare.name=Blank Water Card (holo rare)
-item.card.blank.water.ultraRare.name=Blank Water Card (ultra rare)
-item.card.blank.water.secretRare.name=Blank Water Card (secret rare)
-item.card.blank.lightning.common.name=Blank Lightning Card (common)
-item.card.blank.lightning.uncommon.name=Blank Lightning Card (uncommon)
-item.card.blank.lightning.rare.name=Blank Lightning Card (rare)
-item.card.blank.lightning.holoRare.name=Blank Lightning Card (holo rare)
-item.card.blank.lightning.ultraRare.name=Blank Lightning Card (ultra rare)
-item.card.blank.lightning.secretRare.name=Blank Lightning Card (secret rare)
-item.card.blank.fighting.common.name=Blank Fighting Card (common)
-item.card.blank.fighting.uncommon.name=Blank Fighting Card (uncommon)
-item.card.blank.fighting.rare.name=Blank Fighting Card (rare)
-item.card.blank.fighting.holoRare.name=Blank Fighting Card (holo rare)
-item.card.blank.fighting.ultraRare.name=Blank Fighting Card (ultra rare)
-item.card.blank.fighting.secretRare.name=Blank Fighting Card (secret rare)
-item.card.blank.psychic.common.name=Blank Psychic Card (common)
-item.card.blank.psychic.uncommon.name=Blank Psychic Card (uncommon)
-item.card.blank.psychic.rare.name=Blank Psychic Card (rare)
-item.card.blank.psychic.holoRare.name=Blank Psychic Card (holo rare)
-item.card.blank.psychic.ultraRare.name=Blank Psychic Card (ultra rare)
-item.card.blank.psychic.secretRare.name=Blank Psychic Card (secret rare)
-item.card.blank.colorless.common.name=Blank Colorless Card (common)
-item.card.blank.colorless.uncommon.name=Blank Colorless Card (uncommon)
-item.card.blank.colorless.rare.name=Blank Colorless Card (rare)
-item.card.blank.colorless.holoRare.name=Blank Colorless Card (holo rare)
-item.card.blank.colorless.ultraRare.name=Blank Colorless Card (ultra rare)
-item.card.blank.colorless.secretRare.name=Blank Colorless Card (secret rare)
-item.card.blank.darkness.common.name=Blank Darkness Card (common)
-item.card.blank.darkness.uncommon.name=Blank Darkness Card (uncommon)
-item.card.blank.darkness.rare.name=Blank Darkness Card (rare)
-item.card.blank.darkness.holoRare.name=Blank Darkness Card (holo rare)
-item.card.blank.darkness.ultraRare.name=Blank Darkness Card (ultra rare)
-item.card.blank.darkness.secretRare.name=Blank Darkness Card (secret rare)
-item.card.blank.metal.common.name=Blank Metal Card (common)
-item.card.blank.metal.uncommon.name=Blank Metal Card (uncommon)
-item.card.blank.metal.rare.name=Blank Metal Card (rare)
-item.card.blank.metal.holoRare.name=Blank Metal Card (holo rare)
-item.card.blank.metal.ultraRare.name=Blank Metal Card (ultra rare)
-item.card.blank.metal.secretRare.name=Blank Metal Card (secret rare)
-item.card.blank.dragon.common.name=Blank Dragon Card (common)
-item.card.blank.dragon.uncommon.name=Blank Dragon Card (uncommon)
-item.card.blank.dragon.rare.name=Blank Dragon Card (rare)
-item.card.blank.dragon.holoRare.name=Blank Dragon Card (holo rare)
-item.card.blank.dragon.ultraRare.name=Blank Dragon Card (ultra rare)
-item.card.blank.dragon.secretRare.name=Blank Dragon Card (secret rare)
-item.card.blank.fairy.common.name=Blank Fairy Card (common)
-item.card.blank.fairy.uncommon.name=Blank Fairy Card (uncommon)
-item.card.blank.fairy.rare.name=Blank Fairy Card (rare)
-item.card.blank.fairy.holoRare.name=Blank Fairy Card (holo rare)
-item.card.blank.fairy.ultraRare.name=Blank Fairy Card (ultra rare)
-item.card.blank.fairy.secretRare.name=Blank Fairy Card (secret rare)
+item.card.blank.grass.common.name=空白草系卡(常见)
+item.card.blank.grass.uncommon.name=空白草系卡(不常见)
+item.card.blank.grass.rare.name=空白草系卡(稀有)
+item.card.blank.grass.holoRare.name=空白草系卡(极其稀有)
+item.card.blank.grass.ultraRare.name=空白草系卡(超级稀有)
+item.card.blank.grass.secretRare.name=空白草系卡(珍贵)
+item.card.blank.fire.common.name=空白火系卡(常见)
+item.card.blank.fire.uncommon.name=空白火系卡(不常见)
+item.card.blank.fire.rare.name=空白火系卡(稀有)
+item.card.blank.fire.holoRare.name=空白火系卡(极其稀有)
+item.card.blank.fire.ultraRare.name=空白火系卡(超级稀有)
+item.card.blank.fire.secretRare.name=空白火系卡(珍贵)
+item.card.blank.water.common.name=空白水系卡(常见)
+item.card.blank.water.uncommon.name=空白水系卡(不常见)
+item.card.blank.water.rare.name=空白水系卡(稀有)
+item.card.blank.water.holoRare.name=空白水系卡(极其稀有)
+item.card.blank.water.ultraRare.name=空白水系卡(超级稀有)
+item.card.blank.water.secretRare.name=空白水系卡(珍贵)
+item.card.blank.lightning.common.name=空白电系卡(常见)
+item.card.blank.lightning.uncommon.name=空白电系卡(不常见)
+item.card.blank.lightning.rare.name=空白电系卡(稀有)
+item.card.blank.lightning.holoRare.name=空白电系卡(极其稀有)
+item.card.blank.lightning.ultraRare.name=空白电系卡(超级稀有)
+item.card.blank.lightning.secretRare.name=空白电系卡(珍贵)
+item.card.blank.fighting.common.name=空白格斗系卡(常见)
+item.card.blank.fighting.uncommon.name=空白格斗系卡(不常见)
+item.card.blank.fighting.rare.name=空白格斗系卡(稀有)
+item.card.blank.fighting.holoRare.name=空白格斗系卡(极其稀有)
+item.card.blank.fighting.ultraRare.name=空白格斗系卡(超级稀有)
+item.card.blank.fighting.secretRare.name=空白格斗系卡(珍贵)
+item.card.blank.psychic.common.name=空白超能系卡(常见)
+item.card.blank.psychic.uncommon.name=空白超能系卡(不常见)
+item.card.blank.psychic.rare.name=空白超能系卡(稀有)
+item.card.blank.psychic.holoRare.name=空白超能系卡(极其稀有)
+item.card.blank.psychic.ultraRare.name=空白超能系卡(超级稀有)
+item.card.blank.psychic.secretRare.name=空白超能系卡(珍贵)
+item.card.blank.colorless.common.name=空白一般系卡(常见)
+item.card.blank.colorless.uncommon.name=空白一般系卡(不常见)
+item.card.blank.colorless.rare.name=空白一般系卡(稀有)
+item.card.blank.colorless.holoRare.name=空白一般系卡(极其稀有)
+item.card.blank.colorless.ultraRare.name=空白一般系卡(超级稀有)
+item.card.blank.colorless.secretRare.name=空白一般系卡(珍贵)
+item.card.blank.darkness.common.name=空白恶系卡(常见)
+item.card.blank.darkness.uncommon.name=空白恶系卡(不常见)
+item.card.blank.darkness.rare.name=空白恶系卡(稀有)
+item.card.blank.darkness.holoRare.name=空白恶系卡(极其稀有)
+item.card.blank.darkness.ultraRare.name=空白恶系卡(超级稀有)
+item.card.blank.darkness.secretRare.name=空白恶系卡(珍贵)
+item.card.blank.metal.common.name=空白钢系卡(常见)
+item.card.blank.metal.uncommon.name=空白钢系卡(不常见)
+item.card.blank.metal.rare.name=空白钢系卡(稀有)
+item.card.blank.metal.holoRare.name=空白钢系卡(极其稀有)
+item.card.blank.metal.ultraRare.name=空白钢系卡(超级稀有)
+item.card.blank.metal.secretRare.name=空白钢系卡(珍贵)
+item.card.blank.dragon.common.name=空白龙系卡(常见)
+item.card.blank.dragon.uncommon.name=空白龙系卡(不常见)
+item.card.blank.dragon.rare.name=空白龙系卡(稀有)
+item.card.blank.dragon.holoRare.name=空白龙系卡(极其稀有)
+item.card.blank.dragon.ultraRare.name=空白龙系卡(超级稀有)
+item.card.blank.dragon.secretRare.name=空白龙系卡(珍贵)
+item.card.blank.fairy.common.name=空白妖精系卡(常见)
+item.card.blank.fairy.uncommon.name=空白妖精系卡(不常见)
+item.card.blank.fairy.rare.name=空白妖精系卡(稀有)
+item.card.blank.fairy.holoRare.name=空白妖精系卡(极其稀有)
+item.card.blank.fairy.ultraRare.name=空白妖精系卡(超级稀有)
+item.card.blank.fairy.secretRare.name=空白妖精系卡(珍贵)
 
-//Base Set
-set.BS.name=Base Set
-set.JG.name=Jungle Set
+//基础设定
+set.BS.name=基础设定
+set.JG.name=复杂设定
 
-//Base Set - Attacks
-//Alakazam
-card.BS1.name=Alakazam
-ability.BS1.name=Damage Swap
-ability.BS1.text=During your turn, you may move 1 damage counter from 1 of your Pokémon to another as long as you don't Knock Out that Pokémon. Disabled by Sleep, Confusion and Paralysis.
-attack.BS1.1.name=Confuse Ray
-attack.BS1.1.text=Flip a coin. If heads, the Defending Pokémon is now Confused.
-//Blastoise
-card.BS2.name=Blastoise
-ability.BS2.name=Rain Dance
-ability.BS2.text=During your turn, you may attach 1 Water Energy to 1 of your Pokemon. Disabled by Sleep, Confusion and Paralysis.
-attack.BS2.1.name=Hydro Pump
-attack.BS2.1.text=Add 10 damage per Water Energy attached to Blastoise that is not used for this attack's Energy cost, up to 20 bonus damage.
+//基础设定- 攻击
+//胡地
+card.BS1.name=胡地
+ability.BS1.name=伤害交换
+ability.BS1.text=在己方回合内，从己方一只宝可梦身上移动1个伤害指示物到己方另一只未被击倒的宝可梦身上。在睡眠，混乱和麻痹状态下禁用。
+attack.BS1.1.text=投掷1次硬币，如果出现正面，则防守的精灵混乱。
+//水箭龟
+card.BS2.name=水箭龟
+ability.BS2.name=乞雨
+ability.BS2.text=在己方回合内，选择你手牌中的一张水系能量卡，并把它贴在己方一只水系神奇宝贝身上。在睡眠，混乱和麻痹状态下禁用。
+attack.BS2.1.name=水炮
+attack.BS2.1.text=这次攻击的基本伤害追加“10×自身携带的水系能量数目”。最多20点追加伤害。
 //Chansey
-card.BS3.name=Chansey
-attack.BS3.1.name=Scrunch
-attack.BS3.1.text=Flip a coin. If heads, prevent all damage done to Chansey during your opponent's next turn. (Any other effects of attacks still happen.)
-attack.BS3.2.name=Double Edge
-attack.BS3.2.text=Chansey does 80 damage to itself.
+card.BS3.name=吉利蛋
+attack.BS3.1.name=蜷缩
+attack.BS3.1.text=投掷1次硬币，如果出现正面，在对手接下来的回合，自身不受任何招式造成的伤害。(任何其他的攻击效果仍触发。)
+attack.BS3.2.name=舍身攻击
+attack.BS3.2.text=对自身造成80点伤害。
 //Charizard
 card.BS4.name=Charizard
 ability.BS4.name=Energy Burn
