--- a/zh_CN.lang
+++ b/zh_CN.lang
@@ -168,7 +168,7 @@ ability.BS2.name=乞雨
 ability.BS2.text=在己方回合内，选择你手牌中的一张水系能量卡，并把它贴在己方一只水系神奇宝贝身上。在睡眠，混乱和麻痹状态下禁用。
 attack.BS2.1.name=水炮
 attack.BS2.1.text=这次攻击的基本伤害追加“10×自身携带的水系能量数目”。最多20点追加伤害。
-//Chansey
+//吉利蛋
 card.BS3.name=吉利蛋
 attack.BS3.1.name=蜷缩
 attack.BS3.1.text=投掷1次硬币，如果出现正面，在对手接下来的回合，自身不受任何招式造成的伤害。(任何其他的攻击效果仍触发。)
